[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project_01"
version = "0.1.0"
description = "A short description of my package"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Jane Doe", email = "jane.doe@example.com"},
]
keywords = ["packaging", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26.4",
    "pandas",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pylint"]
docs = ["sphinx", "sphinx-rtd-theme"]

[project.scripts]
# Creates a command-line script named 'my-command' that calls the
# main function in the 'mymodule' module within the 'mypackage' package
my-command = "mypackage.mymodule:main"

[tool.pytest.ini_options]
# Configuration for the pytest tool
minversion = "6.0"
addopts = "-v" # Adds verbose output
testpaths = [
    "tests",
]

